Update .gitignore Added optee_os and optee_client directories to .gitignore to prevent symbolic links from being recognized as new files. (these modules will be managed as git submodules in the future)

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ prereqs/dcap/*.deb
 prereqs/nuget/*
 prereqs/packages/.packages
 prereqs/sgx-driver/*.bin
+
+# Ignore symbolic links (tentative)
+3rdparty/optee/optee_os
+3rdparty/optee/optee_client
